substituicao de valores fixos para porcentagem, eventlistener na property display e nao visibility

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $green-card:rgb(73, 192, 73);
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 html{
     height: 100%;
@@ -36,7 +37,6 @@ label{
 }
 
 .card{ 
-    visibility: hidden;
     width: 90%;
     border-radius: 7%;
     height: 100%;
@@ -49,16 +49,18 @@ label{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap:10px;
+    gap:3%;
 }
 .input{
-    height: 30px;
+    height: 100%;
     width: 80%;
     
     
     
 }
 .containerInput{
+    margin:auto;
+    height: 16%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -67,16 +69,15 @@ label{
 
 }
 .containerTitle{
-    padding-top: 10px;
+    
 }
 
 
 .containerRead{
-    gap: 5px;
+    gap: 15%;
 }
 .read{
     width: 25%;
-    height: 30px;
 
 }
 .button{
@@ -86,17 +87,19 @@ label{
     text-align: center;
 }
 #submit{
-    width: 100px;
-    height: 40px;
-    margin-bottom: 5px;
+    width: 25%;
+    height: 11%;
+    margin-bottom: 1%;
 
 }
 #centered-element {
+    display: none;
     width: 25%;
-    height: 40%;
+    height: 55%;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
+    padding: 2% 0;
   }
